# home_security

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  playground.c
client/: CMakeLists.txt  main.cpp
cmake/: fetchFlatBuffers.cmake
communication/streamer/: CMakeLists.txt  streamer.cpp  streamer.hpp
data/: CMakeLists.txt
data/common_data/: CMakeLists.txt  notifications.hpp  request.hpp  session_type.hpp
data/deserializer/: CMakeLists.txt  deserializer.cpp  deserializer.hpp
data/serializer/: CMakeLists.txt  serializer.cpp  serializer.hpp
detector/inference/: CMakeLists.txt  IInference.hpp  torchInference.cpp  torchInference.hpp
fb/: message.fbs  request.fbs  response.fbs
server/: CMakeLists.txt  main.cpp
server/communication/: CMakeLists.txt
server/communication/streamer/: CMakeLists.txt  streamer.cpp  streamer.hpp
server/communication/tcp_server/: CMakeLists.txt  message_handler.cpp  message_handler.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  tcp_server.cpp  tcp_server.hpp
server/detector/inference/: CMakeLists.txt
